added usermodes fetch endpoints

--- a/openspy-web-backend/appsettings.json
+++ b/openspy-web-backend/appsettings.json
@@ -12,6 +12,7 @@
     "GamemasterDB": "server=35.232.229.99;database=Gamemaster;user=root;password=BsDxg0aqbiz0zfpv",
     "GameTrackerDB": "server=35.232.229.99;database=GameTracker;user=root;password=BsDxg0aqbiz0zfpv",
     "KeymasterDB": "server=35.232.229.99;database=Keymaster;user=root;password=BsDxg0aqbiz0zfpv",
+    "PeerchatDB": "server=35.232.229.99;database=Peerchat;user=root;password=BsDxg0aqbiz0zfpv",
     "rmqConnection": "amqp://guest:guest@localhost:5672/",
     "snapshotDB": "mongodb://localhost:27017",
     "redisCache": "localhost,allowAdmin=true"
